--- a/space-consumers.cabal
+++ b/space-consumers.cabal
@@ -2,6 +2,8 @@ cabal-version:      3.0
 name:               space-consumers
 version:            0.1.0.0
 synopsis:           Improved space consumers for megaparsec
+description:        Provides an alternative approach for lexing and mostly for
+                    indentation-sensitive parsing
 homepage:           https://github.com/Lev135/space-consumers
 license:            BSD-3-Clause
 license-file:       LICENSE
@@ -11,9 +13,13 @@ copyright:          (c) 2022, Lev Dvorkin
 category:           parsing
 extra-source-files: CHANGELOG.md
 
+source-repository head
+    type:           git
+    location:       https://github.com/Lev135/space-consumers
+
 common basics
   default-language:   Haskell2010
-  build-depends:      base
+  build-depends:      base >= 4.14 && < 4.17
                     , megaparsec
                     , text
                     , containers
